[EPMCDLAB-1858]: prevent extra scrollbar during tabs switching

--- a/services/self-service/src/main/resources/webapp/src/app/health-status/ssn-monitor/ssn-monitor.component.scss
+++ b/services/self-service/src/main/resources/webapp/src/app/health-status/ssn-monitor/ssn-monitor.component.scss
@@ -17,6 +17,14 @@ limitations under the License.
 ****************************************************************************/
 
 .ssn-monitor-dialog {
+  .ssn-info {
+    min-height: 400px;
+    max-height: 500px;
+    .scrolling-content {
+      max-height: 400px;
+      overflow-y: auto;
+    }
+  }
   .mat-list-item-content {
     display: flex;
     color: #577289;
