--- a/services/self-service/src/main/resources/webapp/src/assets/styles/_theme.scss
+++ b/services/self-service/src/main/resources/webapp/src/assets/styles/_theme.scss
@@ -144,7 +144,7 @@ font-weight: 400;
 .manage-roles-dialog {
   .mat-form-field-type-mat-select:not(.mat-form-field-disabled) {
     .mat-form-field-flex {
-      line-height: 22px;
+      line-height: 20px;
     }
   }
   .mat-input-wrapper {
@@ -154,7 +154,7 @@ font-weight: 400;
         width: 275px;
         border: 0;
         font-family: 'Open Sans', sans-serif;
-        font-size: 15px;
+        font-size: 16px;
         font-weight: 300;
         .mat-select-value-text {
           span {
